--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    height: 100vh;
+    box-sizing: border-box;
+    background-color: aliceblue;
+    color: black;
+}
+
+
 header{
     display: flex;
-    flex-direction: row;
+    width: 1136px;
+    height: 88px;
+    margin: 3% 10%;
     justify-content: space-between;
+    align-items: center;
+    font-family:  "Raleway", sans-serif;
+    font-size: 16px;
+    
+}
+
+.name {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.apresentacao{
+    margin: 3% 10%;
+    width: 1136px;
+    height: 255px;
+}
+
+.conteudo{
+    display: flex;
+    flex-direction: column;
+    margin: 3% 10%;
+    
+}
+
+.habilidades{
+    display: flex;
+    gap: 30px;
+}
+
+
+.inicio {
+    font-size: 52px;
+
+}
+
+.apresentacao__descricao{
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+    
+
+
 
 }
